corey888773.median-filter.652d567c1c0a99be8c607a94316ef6a7252968db
Running as unit: run-p4161871-i4162171.scope; invocation ID: 766f233eef814b938198555dd109d331
   Compiling proc-macro2 v1.0.103
   Compiling quote v1.0.42
   Compiling unicode-ident v1.0.22
   Compiling autocfg v1.5.0
   Compiling libm v0.2.15
    Checking cfg-if v1.0.4
   Compiling libc v0.2.177
   Compiling zerocopy v0.8.27
   Compiling cfg_aliases v0.2.1
    Checking bitflags v2.10.0
   Compiling num-traits v0.2.19
   Compiling crossbeam-utils v0.8.21
   Compiling thiserror v2.0.17
    Checking arrayvec v0.7.6
    Checking log v0.4.28
   Compiling glob v0.3.3
   Compiling syn v2.0.110
   Compiling clang-sys v1.8.1
    Checking crossbeam-epoch v0.9.18
    Checking memchr v2.7.6
   Compiling prettyplease v0.2.37
   Compiling rustix v0.38.44
   Compiling rayon-core v1.13.0
    Checking smallvec v1.15.1
    Checking crossbeam-deque v0.8.6
   Compiling either v1.15.0
   Compiling minimal-lexical v0.2.1
    Checking simd-adler32 v0.3.7
   Compiling regex-syntax v0.8.8
   Compiling linux-raw-sys v0.4.15
   Compiling libloading v0.8.9
    Checking num-integer v0.1.46
   Compiling nom v7.1.3
    Checking foldhash v0.2.0
   Compiling shell-words v1.1.0
   Compiling anyhow v1.0.100
   Compiling parking_lot_core v0.9.12
   Compiling bindgen v0.69.5
   Compiling regex-automata v0.4.13
   Compiling shlex v1.3.0
   Compiling pkg-config v0.3.32
   Compiling home v0.5.12
   Compiling which v4.4.2
   Compiling build-probe-mpi v0.1.4
    Checking hashbrown v0.16.0
    Checking num-bigint v0.4.6
   Compiling regex v1.12.2
   Compiling cexpr v0.6.0
   Compiling itertools v0.12.1
   Compiling naga v27.0.3
    Checking once_cell v1.21.3
    Checking scopeguard v1.2.0
   Compiling rustc-hash v1.1.0
    Checking stable_deref_trait v1.2.1
    Checking adler2 v2.0.1
    Checking unicode-width v0.2.2
    Checking bit-vec v0.8.0
    Checking foldhash v0.1.5
   Compiling lazycell v1.3.0
   Compiling lazy_static v1.5.0
    Checking equivalent v1.0.2
   Compiling crc32fast v1.5.0
   Compiling find-msvc-tools v0.1.5
   Compiling ash v0.38.0+1.3.281
   Compiling khronos-egl v6.0.0
   Compiling cc v1.2.46
    Checking indexmap v2.12.0
    Checking bit-set v0.8.0
   Compiling zerocopy-derive v0.8.27
   Compiling thiserror-impl v2.0.17
   Compiling equator-macro v0.4.2
   Compiling profiling-procmacros v1.0.17
   Compiling bytemuck_derive v1.10.2
    Checking equator v0.4.2
    Checking profiling v1.0.17
    Checking hashbrown v0.15.5
    Checking codespan-reporting v0.12.0
    Checking aligned-vec v0.6.4
    Checking v_frame v0.3.9
    Checking miniz_oxide v0.8.9
    Checking as-slice v0.2.1
    Checking lock_api v0.4.14
    Checking num-rational v0.4.2
    Checking rayon v1.11.0
    Checking gpu-alloc-types v0.3.0
    Checking gpu-descriptor-types v0.2.0
    Checking spirv v0.3.0+sdk-1.3.268.0
   Compiling wgpu-hal v27.0.4
    Checking bytemuck v1.24.0
    Checking hexf-parse v0.2.1
   Compiling built v0.8.0
   Compiling getrandom v0.3.4
   Compiling paste v1.0.15
   Compiling av-scenechange v0.14.1
    Checking half v2.7.1
   Compiling rav1e v0.8.1
    Checking wgpu-types v27.0.1
    Checking gpu-descriptor v0.3.2
    Checking gpu-alloc v0.6.0
    Checking parking_lot v0.12.5
    Checking aligned v0.4.2
   Compiling arg_enum_proc_macro v0.3.4
    Checking ordered-float v5.1.0
    Checking core2 v0.4.0
    Checking nom v8.0.0
    Checking y4m v0.8.0
   Compiling serde_core v1.0.228
    Checking utf8parse v0.2.2
    Checking glow v0.16.0
   Compiling pastey v0.1.1
   Compiling mpi-sys v0.2.2
    Checking renderdoc-sys v1.1.0
    Checking raw-window-handle v0.6.2
    Checking quick-error v2.0.1
    Checking anstyle-parse v0.2.7
    Checking maybe-rayon v0.1.1
    Checking bitstream-io v4.9.0
    Checking flate2 v1.1.5
   Compiling num-derive v0.4.2
   Compiling fax_derive v0.2.0
    Checking itertools v0.14.0
   Compiling simd_helpers v0.1.0
   Compiling memoffset v0.9.1
   Compiling wgpu-core v27.0.3
    Checking new_debug_unreachable v1.0.6
   Compiling noop_proc_macro v0.3.0
    Checking is_terminal_polyfill v1.70.2
    Checking colorchoice v1.0.4
    Checking anstyle v1.0.13
    Checking anstyle-query v1.1.5
    Checking imgref v1.12.0
    Checking zune-core v0.4.12
   Compiling thiserror v1.0.69
    Checking weezl v0.1.12
   Compiling litrs v1.0.0
    Checking zune-jpeg v0.4.21
   Compiling document-features v0.2.12
    Checking loop9 v0.1.5
    Checking anstream v0.6.21
    Checking fax v0.2.6
    Checking rand_core v0.9.3
    Checking ppv-lite86 v0.2.21
   Compiling thiserror-impl v1.0.69
   Compiling mpi v0.8.0
    Checking fdeflate v0.3.7
    Checking zune-inflate v0.2.54
    Checking pxfm v0.1.25
    Checking avif-serialize v0.8.6
   Compiling wgpu v27.0.1
    Checking color_quant v1.1.0
    Checking bit_field v0.10.3
   Compiling heck v0.5.0
   Compiling serde v1.0.228
    Checking rgb v0.8.52
    Checking byteorder-lite v0.1.0
    Checking clap_lex v0.7.6
    Checking strsim v0.11.1
    Checking zune-core v0.5.0
    Checking custom_derive v0.1.7
    Checking lebe v0.5.3
    Checking clap_builder v4.5.52
    Checking exr v1.74.0
    Checking moxcms v0.7.9
    Checking zune-jpeg v0.5.5
    Checking conv v0.3.3
    Checking image-webp v0.2.4
   Compiling clap_derive v4.5.49
    Checking gif v0.14.0
    Checking png v0.18.0
    Checking rand_chacha v0.9.0
    Checking tiff v0.10.3
    Checking qoi v0.4.1
   Compiling mpi-derive v0.1.2
   Compiling serde_derive v1.0.228
    Checking wgpu-core-deps-windows-linux-android v27.0.0
    Checking csv-core v0.1.13
    Checking static_assertions v1.1.0
    Checking iana-time-zone v0.1.64
    Checking ryu v1.0.20
    Checking itoa v1.0.15
    Checking chrono v0.4.42
    Checking csv v1.4.0
    Checking clap v4.5.52
    Checking rand v0.9.2
    Checking pollster v0.4.0
error[E0275]: overflow evaluating the requirement `&global::Global: Send`
  --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/wgpu-core-27.0.3/src/global.rs:99:19
   |
99 |     test_internal(global)
   |     ------------- ^^^^^^
   |     |
   |     required by a bound introduced by this call
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`wgpu_core`)
note: required by a bound in `test_internal`
  --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/wgpu-core-27.0.3/src/global.rs:98:25
   |
98 |     fn test_internal<T: Send + Sync>(_: T) {}
   |                         ^^^^ required by this bound in `test_internal`

error[E0275]: overflow evaluating the requirement `&global::Global: Sync`
  --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/wgpu-core-27.0.3/src/global.rs:99:19
   |
99 |     test_internal(global)
   |     ------------- ^^^^^^
   |     |
   |     required by a bound introduced by this call
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`wgpu_core`)
note: required by a bound in `test_internal`
  --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/wgpu-core-27.0.3/src/global.rs:98:32
   |
98 |     fn test_internal<T: Send + Sync>(_: T) {}
   |                                ^^^^ required by this bound in `test_internal`

    Checking av1-grain v0.2.5
For more information about this error, try `rustc --explain E0275`.
error: could not compile `wgpu-core` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
